@@ -1,0 +1,7 @@
+#include <stdio.h>
+#include <stdlib.h>
+#include <caml/mlvalues.h>
+
+intnat test(intnat b,intnat c,intnat d) {
+  return(b+c+d);
+}
